@@ -29,6 +29,7 @@ source-code: "tabs" instead of "spaces"
 - added: framework.onCompileView(name, content, model)
 - added: `@{compile handlerbars}CONTENT TO COMPILE@{end}`
 - added: `@{compile}CONTENT TO COMPILE@{end}`
+- added: Utils.streamer(delimiter, function(value, index)) returns function
 
 - updated: (IMPORTANT): for evaluation multiple roles in routing (@role) framework validates only one role
 - updated: GZIP compression for static files (added .md, .json)
